# VidLibOrganizer

./: .gitignore  Cargo.toml  EXPANSION_PLAN.md  README.MD
crates/vidlib-cli/: Cargo.toml
crates/vidlib-cli/src/: main.rs
crates/vidlib-core/: Cargo.toml
crates/vidlib-core/src/: error.rs  lib.rs  models.rs  progress.rs
crates/vidlib-db/: Cargo.toml
crates/vidlib-db/src/: lib.rs
crates/vidlib-duplicates/: Cargo.toml
crates/vidlib-duplicates/src/: lib.rs
crates/vidlib-fileops/: Cargo.toml
crates/vidlib-fileops/src/: lib.rs
crates/vidlib-metadata/: Cargo.toml
crates/vidlib-metadata/src/: lib.rs
crates/vidlib-ml/: Cargo.toml
crates/vidlib-ml/src/: lib.rs
crates/vidlib-scanner/: Cargo.toml
crates/vidlib-scanner/src/: lib.rs
crates/vidlib-workflows/: Cargo.toml
crates/vidlib-workflows/src/: lib.rs  scan.rs
docs/: architecture.md  codemap.md  crate-contracts.md  development_progress.md  full_project_documentation.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: workflow_integration.rs
ui/: index.html  main.js  styles.css
