[package]
name = "vidlib-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true
vidlib-core = { path = "../vidlib-core" }

[dev-dependencies]
tempfile.workspace = true
