[package]
name = "vidlib-duplicates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
hex.workspace = true
image.workspace = true
serde.workspace = true
sha2.workspace = true
vidlib-core = { path = "../vidlib-core" }

[dev-dependencies]
uuid.workspace = true
